--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/standard.css">
     <script src="script.js"></script>
 </head>
-<body>
+<body onload="init()">
+    <header w3-include-html="templates/header.html"></header>
     
 </body>
 </html>
