--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <title>Pokemon</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styles/standard.css">
+    <link rel="stylesheet" href="styles/fonts.css">
     <script src="script.js"></script>
 </head>
 <body onload="init()">
     <header w3-include-html="templates/header.html"></header>
+    <main>
+        <section id="pokemon_overview"></section>
+    </main>
     
 </body>
 </html>
