style & animation flip card

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="styles/standard.css">
     <link rel="stylesheet" href="styles/fonts.css">
     <link rel="stylesheet" href="styles/pokemon_types.css">
+    <script src="scripts/templates.js"></script>
     <script src="script.js"></script>
+
 </head>
 <body onload="init()">
     <header w3-include-html="templates/header.html"></header>
     <main>
+        <dialog class="pokemon_detailed_card_view">TEST</dialog>
         <section id="pokemon_overview"></section>
     </main>
     
