add content & style pokemon card

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body onload="init()">
     <header w3-include-html="templates/header.html"></header>
     <main>
-        <dialog class="pokemon_detailed_card_view">TEST</dialog>
+        <dialog class="pokemon_detailed_card_view"></dialog>
         <section id="pokemon_overview"></section>
     </main>
     
