--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 </head>
 <body onload="init()">
+
+    <div id="spinner" class="loader_section d-none"><img class="loader" src="assets/img/pokeball.png" alt="Bild eines Pokeballs"></div>
     <header w3-include-html="templates/header.html"></header>
     <main>
         <dialog class="pokemon_detailed_card_view"></dialog>
