feature: add more pokemon

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="styles/fonts.css">
     <link rel="stylesheet" href="styles/pokemon_types.css">
     <script src="scripts/templates.js"></script>
+    <script src="scripts/pokemon_all.js"></script>
     <script src="script.js"></script>
+    
 
 </head>
 <body onload="init()">
@@ -19,6 +21,7 @@
     <main>
         <dialog class="pokemon_detailed_card_view"></dialog>
         <section id="pokemon_overview"></section>
+        <button class="more_pokemon_btn" onclick="loadMorePokemon()">weitere Pokemon</button>
     </main>
     
 </body>
