--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles/standard.css">
     <link rel="stylesheet" href="styles/fonts.css">
     <link rel="stylesheet" href="styles/pokemon_types.css">
+    <link rel="icon" type="image/x-icon" href="assets/img/pokeball_cursor.png">
+    <link rel="stylesheet" href="styles/mobil.css">
     <script src="scripts/templates.js"></script>
     <script src="scripts/pokemon_all.js"></script>
     <script src="script.js"></script>
